--- a/tourist.html
+++ b/tourist.html
@@ -75,8 +75,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="images/parola1.jpg">
-      <img src="images/parola1.jpg" width="600" height="400">
+    <a target="_blank" href="parola1.jpg">
+      <img src="parola1.jpg" width="600" height="400">
     </a>
     <div class="desc">PAROLA RESTAURANT</div>
   </div>
@@ -85,8 +85,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="images/parola4.jpg">
-      <img src="images/parola4.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="/parola4.jpg">
+      <img src="parola4.jpg" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">PAROLA</div>
   </div>
@@ -94,8 +94,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="images/parola3.jpg">
-      <img src="images/parola3.jpg"  width="600" height="400">
+    <a target="_blank" href="parola3.jpg">
+      <img src="parola3.jpg"  width="600" height="400">
     </a>
     <div class="desc">NICE AMBIANCE</div>
   </div>
@@ -103,8 +103,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="images/parola2.jpg">
-      <img src="images/parola2.jpg"width="600" height="700">
+    <a target="_blank" href="parola2.jpg">
+      <img src="parola2.jpg"width="600" height="700">
     </a>
     <div class="desc">MENU</div>
   </div>
